fix highlights on labels on mobile devices

--- a/style.css
+++ b/style.css
@@ -131,4 +131,8 @@ button:focus {
 	button {
 		cursor: none;
 	}
+
+	ul li label {
+		cursor: none;
+	}
 }
